# Rust_microservice

./: .env  Cargo.toml
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
src/: db.rs  db_connection.rs  main.rs  rest.rs  schema.rs
