[package]
name = "rust_microservice"
version = "0.1.0"
edition = "2021"



[dependencies]
rocket = "0.4.5"
rocket_codegen = "0.4.5"
diesel = { version = "1.4.4", features = ["postgres"] }
r2d2-diesel = "1.0.0"
r2d2 = "0.8.9"
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0.58"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]